# Agenticai_hackathon

./: README.md
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/: .gitignore  .pre-commit-config.yaml  README.md  app.py  new_app.py  populate_vector_db.py  pyproject.toml  requirements.txt  run.sh  vector.py
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/.github/workflows/: ai_on_bi_llm-accl-agent-chat2data.yml  chat2data_llm-accl-chat2data.yml
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/.streamlit/: config.toml
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/data/: GDO_all_new_version_Data_Asset_Name_modified.csv  snowflake_data.csv  table_metadata.csv
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/datachat/agents/: helpers.py  state_graph.py  supervisor.py
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/datachat/agents/context_finder/: agent.py  tools.py
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/datachat/agents/execute_query/: agent.py  tools.py
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/datachat/agents/generate_plot/: agent.py  tools.py
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/datachat/agents/generate_query/: agent.py  tools.py
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/datachat/agents/validate_query/: agent.py  tools.py  (+1 more)
GenAI_accelerator_code-ai_on_bi/GenAI_accelerator_code-ai_on_bi/datachat/utils/: agent.py  db.py  llm.py  sql.py  vectordb.py
(+32 files in other folders)
