[tool.poetry]
name = "text2sql"
version = "0.1.0"
description = ""
authors = ["Santhosh Kumar M", "Santhana Selvi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
streamlit-chat = "^0.1.1"
langchain-openai = "^0.1.23"
lancedb = "^0.12.0"
langchain-community = "^0.2.14"
sqlalchemy = "^2.0.32"
duckdb = "^1.0.0"
outlines = "^0.0.46"
plotly = "^5.24.0"
matplotlib = "^3.9.2"
psycopg2 = "^2.9.9"
snowflake-connector-python = "^3.12.2"
pillow = "^10.4.0"
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"
langgraph = "^0.2.27"
langsmith = "^0.1.128"
pandas = "^2.2.3"
sqlglot = "^25.28.0"
pymssql

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
